# openproton-bridge

./: .gitignore  AGENTS.md  BACKEND_PARITY_IMPLEMENTATION_BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  FRONTEND_PARITY_IMPLEMENTATION_BACKLOG.md  GRPC_PARITY_IMPLEMENTATION_PLAN.md  GRPC_PARITY_TABLE.md  GRPC_UI_TAURI_SVELTE_PLAN.md  MULTIUSER_SPLIT_EVENT_PLAN.md  PARITY_PARALLEL_EXECUTION_PLAN.md  PLAN.md  README.md  build.rs  flake.nix  interactive-cli-parity.plan  test-imaptest.sh
.github/workflows/: backend-parity-gate.yml  bridge-ui-desktop-build.yml  bridge-ui-parity.yml  ci-release.yml  gluon-parity-recovery-gate.yml
apps/bridge-ui/: .gitignore  README.md  dav.sh  index.html  package.json  playwright.parity.config.ts  playwright.visual.config.ts  vite.config.ts
apps/bridge-ui/e2e/: parity.runtime.spec.ts  parity.spec.ts  visual.spec.ts
apps/bridge-ui/src/: App.svelte  App.test.ts  app.css  main.ts
apps/bridge-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/bridge-ui/src-tauri/capabilities/: default.json
apps/bridge-ui/src-tauri/icons/: icon.icns
apps/bridge-ui/src-tauri/proto/: bridge.proto
apps/bridge-ui/src-tauri/src/: main.rs  state.rs  tray.rs
apps/bridge-ui/src-tauri/src/grpc/: adapter.rs  config.rs  mod.rs
crates/gluon-rs/: Cargo.toml  README.md
crates/gluon-rs-calendar/: Cargo.toml
crates/gluon-rs-calendar/src/: error.rs  (+7 more)
crates/gluon-rs-contacts/: Cargo.toml
crates/gluon-rs-core/: Cargo.toml  README.md
crates/gluon-rs-dav/: Cargo.toml
crates/gluon-rs-dav/src/: auth.rs  discovery.rs  error.rs  etag.rs  http.rs  lib.rs  propfind.rs  report.rs  server.rs  types.rs  xml.rs
crates/gluon-rs-mail/: Cargo.toml  README.md
crates/gluon-rs-mail/src/: blob_store.rs  command.rs  db.rs  db_migrations.rs  error.rs  gluon_connector.rs  imap_connector.rs  imap_error.rs  imap_store.rs  imap_types.rs  lib.rs  mailbox.rs  metadata_parse.rs  response.rs  rfc822.rs  server.rs  session.rs  store.rs  target.rs  types.rs  well_known.rs
crates/gluon-rs-mail/src/backend/: actions.rs  mod.rs  snapshot.rs  state.rs  user.rs
crates/gluon-rs-mail/src/backend/state/: actions.rs  mod.rs  updates.rs
crates/gluon-rs-mail/src/command/: fetch.rs  mod.rs  parse_helpers.rs  search.rs  sequence.rs  store.rs
crates/gluon-rs-mail/src/session/: append.rs  auth.rs  copy_move.rs  expunge.rs  fetch.rs  helpers.rs  idle.rs  mailbox_cmds.rs  misc.rs  mod.rs  search.rs  store.rs
crates/gluon-rs-mail/tests/: backend_integration.rs
crates/gluon-rs/src/: blob.rs  db.rs  error.rs  key.rs  layout.rs  lib.rs  store.rs  txn.rs  types.rs
docs/: BACKEND_PARITY_LEDGER.md  COMPAT_AND_ISOLATED_RUNTIME_PLAN.md  GLUON_FULL_SUPPORT_EXECUTION_PLAN.md  GO_PROTON_API_DATA_MODEL_PARITY.csv  GO_PROTON_API_DATA_MODEL_PARITY.md  GO_PROTON_API_DATA_MODEL_SUPPORT_PLAN.md  PARITY_TEST_OVERLAP_LEDGER.md  calendar-contact-cache-option2-execution-plan.md  calendar-contact-cache-option2-plan.md  calendar-contacts-api-spec-for-rust-bridge.md  dav-adapter-boundary.md  dav-server-operator-and-client-guide.md  grpc-mail-runtime-parity-plan.md  rfc-6352-4791-full-support-plan.md  runtime-supervisor-pr1-checklist.md
docs/parity/: 01-api-surface-matrix.csv  02-event-loop-parity.md  03-message-mutation-parity.md  04-imap-sync-propagation.md  05-checkpoint-recovery.md  06-gap-backlog.md
docs/release/: gluon-hard-cut-checklist.md
docs/runbooks/: gluon-deployment-rollback.md  parity-golden-log-validation.md
docs/workflows/: bridge-ui-parity-matrix.md  bridge-ui-parity-merge-checklist.md
proto/: bridge.proto
scripts/: capture_gluon_fixture.py  validate_parity_logs.py
skills/gluon-hardcut-delivery/: SKILL.md
src/: certs.rs  cli_human_verification.rs  client_config.rs  lib.rs  main.rs  observability.rs  paths.rs  single_instance.rs  vault.rs
src/api/: auth.rs  calendar.rs  client.rs  contacts.rs  error.rs  events.rs  keys.rs  messages.rs  mod.rs  srp.rs  types.rs  users.rs
src/bridge/: accounts.rs  auth_router.rs  calendar_notify.rs  events.rs  imap_connector.rs  mail_runtime.rs  mod.rs  runtime_supervisor.rs  session_manager.rs  sync_state.rs  token_refresh.rs  types.rs
src/crypto/: decrypt.rs  encrypt.rs  keys.rs  mod.rs
src/dav/: auth.rs  bridge_auth.rs  bridge_caldav.rs  caldav.rs  calendar_crypto.rs  carddav.rs  discovery.rs  error.rs  http.rs  mod.rs  propfind.rs  push.rs  push_crypto.rs  push_send.rs  report.rs  server.rs  xml.rs
src/frontend/: grpc.rs
src/grpc/: client.rs  rpc.rs  service.rs
src/imap/: command.rs  convert.rs  gluon_codec.rs  gluon_connector.rs  gluon_lock.rs  gluon_mailbox_mutation.rs  gluon_mailbox_view.rs  gluon_txn.rs  mailbox.rs  mailbox_catalog.rs  mailbox_mutation.rs  mailbox_view.rs  mod.rs  response.rs  rfc822.rs  server.rs  session.rs  store.rs  store_helpers.rs  types.rs
src/jmap/: mod.rs
src/pim/: convert.rs  dav.rs  incremental.rs  mod.rs  query.rs  schema.rs  store.rs  sync_calendar.rs  sync_contacts.rs  types.rs
src/smtp/: mod.rs  send.rs  server.rs  session.rs
tests/: api_event_compatibility.rs  fixture_matrix.rs  gluon_codec.rs  gluon_compatibility_target.rs  gluon_contention.rs  gluon_corruption.rs  gluon_db_support.rs  gluon_db_usage.rs  gluon_fixture_manifest.rs  gluon_integration.rs  gluon_isolation.rs  gluon_key_binding.rs  gluon_lock.rs  gluon_manifest_invariants.rs  gluon_parity_integration.rs  gluon_real_fixture.rs  gluon_recovery_integration.rs  gluon_runtime.rs  gluon_store_mutation.rs  gluon_store_read.rs  gluon_txn.rs  golden_log_validation.rs  grpc_wire_contract.rs  imap_session.rs  imap_smtp_tls_integration.rs  observability_runtime.rs  parity_api_event.rs  parity_golden_logs.rs  parity_grpc_wire.rs  parity_imap_smtp_tls.rs  parity_matrix.rs  parity_observability.rs  parity_runtime_events.rs  parity_store_interop.rs  path_resolver_gluon.rs  runtime_events_e2e.rs  smtp_integration.rs  store_interop.rs
tests/dav/: rfc_a1_negative_paths.rs  rfc_gap_inventory.rs
tests/fixtures/: gluon_compatibility_target.json  gluon_fixture_manifest.json  gluon_manifest.json  parity_golden_logs.json
(+89 files in other folders)
