[package]
name = "openproton-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "multipart"] }
mailparse = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# SRP + crypto
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
sha2 = "0.10"
bcrypt = "0.16"
base64 = "0.22"
rand = "0.8"
sequoia-openpgp = { version = "1", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }

# Async trait
async-trait = "0.1"

# Security
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

# TLS
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
tokio-rustls = "0.26"

# Config + filesystem
dirs = "5"

# Go-compatible vault (MessagePack + OS keychain)
rmp-serde = "1"
serde_bytes = "0.11"
keyring = "3"

# Password input
rpassword = "7"
tonic = { version = "0.12", features = ["tls", "transport"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_matches = "1"
tokio-test = "0.4"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "tokio1"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
