[package]
name = "openproton-bridge"
version = "0.1.0"
edition = "2021"

[features]
default = ["system-keychain"]
system-keychain = []

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "multipart"] }
mailparse = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
flate2 = "1"
tar = "0.4"

# SRP + crypto
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
sha2 = "0.10"
bcrypt = "0.16"
base64 = "0.22"
rand = "0.8"
sequoia-openpgp = { version = "1", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto", "compression-deflate"] }

# Async trait
async-trait = "0.1"

# Security
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }

# Config + filesystem
dirs = "5"
fs2 = "0.4"

# Go-compatible vault (MessagePack + OS keychain)
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
serde_bytes = "0.11"
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Password input
rpassword = "7"
tonic = { version = "0.12", features = ["tls", "transport"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
sha1 = "0.10"
base32 = "0.5"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_matches = "1"
tokio-test = "0.4"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "tokio1"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[workspace]
members = [
    "crates/gluon-rs-core",
    "crates/gluon-rs-mail",
]
