[package]
name = "gluon-rs-dav"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
regex = "1"
thiserror = "2"
tracing = "0.1"

tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = "0.13"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
