[package]
name = "gluon-rs-mail"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
gluon-rs-core = { path = "../gluon-rs-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "2"
mailparse = "0.15"
tokio = { version = "1", features = ["io-util", "sync", "time", "net", "rt", "rt-multi-thread", "macros"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = "0.13"
tracing = "0.1"

[[bin]]
name = "imap-harness"
path = "src/bin/imap_harness.rs"
required-features = ["harness"]

[features]
default = []
harness = ["anyhow", "tracing-subscriber"]

[dependencies.anyhow]
version = "1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
optional = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
