[package]
name = "gluon-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
glob = "0.3"
lz4_flex = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
