[package]
name = "bridge-ui-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri shell for openproton-bridge UI"
authors = ["openproton-bridge"]
license = "GPL-3.0"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }
tonic-build = "0.12"

[dependencies]
dirs = "5"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.2", features = ["tray-icon"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots", "transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
