[package]
name = "bridge-ui-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri shell for openproton-bridge UI"
authors = ["openproton-bridge"]
license = "GPL-3.0"

[features]
default = []
embed-backend = ["dep:openproton-bridge"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }
tonic-build = "0.12"

[dependencies]
dirs = "5"
hyper-util = { version = "0.1", features = ["tokio"] }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.2", features = ["tray-icon"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots", "transport"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
openproton-bridge = { path = "../../..", optional = true }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
uuid = { version = "1", features = ["v4"] }
